Set up style sheet

--- a/snakeGame.html
+++ b/snakeGame.html
@@ -4,9 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Classic Snake</title>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="lib/jquery.js"></script>
+  <script>"src/index.js"</script>
+  <script>"src/basic.js"</script>
 </head>
 <body>
-  
+  <div class="topbar">
+    <span> Score: </span>
+    <span class="score" > 0 </span>
+    <span class="title">object dance party</span>
+    <a href="#" class="startGameButton">Start New Game</a>     
+  </div>
+  <div id='gameOverModal' class='modal'>
+      <div class='modal-content'>Game Over! start new game</div>
+    </div>
+  <div class="gameBoard">
+    
+  </div>
+  </div>
+  <script src="src/index.js"></script>
 </body>
 </html>
