--- a/snakeGame.html
+++ b/snakeGame.html
@@ -14,12 +14,9 @@
   <div class="topbar">
     <span> Score: </span>
     <span class="score" > 0 </span>
-    <span class="title">object dance party</span>
+    <span class="title">Snake</span>
     <a href="#" class="startGameButton">Start New Game</a>     
   </div>
-  <div id='gameOverModal' class='modal'>
-      <div class='modal-content'>Game Over! start new game</div>
-    </div>
   <div class="gameBoard">
     
   </div>
