--- a/snakeGame.html
+++ b/snakeGame.html
@@ -7,9 +7,9 @@
   <title>Classic Snake</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <script src="lib/jquery.js"></script>
-  <script> src="src/basic.js"</script>
-  <script> src="src/fruit.js"</script>
-  <script> src="src/snake.js"</script>
+  <script src="src/basic.js"></script>
+  <script src="src/fruit.js"></script>
+  <script src="src/snake.js"></script>
   <script src="src/snakeTail.js"></script>
 </head>
 <body>
