Added Game over modal

--- a/snakeGame.html
+++ b/snakeGame.html
@@ -19,6 +19,9 @@
     <span class="title">Snake</span>
     <a href="#" class="startGameButton">Start New Game</a>     
   </div>
+  <div id='gameOverModal' class='modal'>
+    <div class='modal-content'>Game Over! start new game</div>
+  </div>
   <div class="gameBoard">
     
   </div>
